--- a/cc_registrant_dashboard/docker-compose.yml
+++ b/cc_registrant_dashboard/docker-compose.yml
@@ -2,6 +2,11 @@ services:
   database:
     image: postgres:15
     env_file: ".env"
+    volumes:
+      - db-data:/var/lib/postgresql/data
 
     ports:
       - 5432:5432
+
+volumes:
+  db-data:
